--- a/regulamin/index.html
+++ b/regulamin/index.html
@@ -1,22 +1,25 @@
 <section id="regulamin" style="max-width:900px;margin:40px auto;padding:20px;background:#ffffff;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,.08);font-family:Arial,sans-serif;">
-  <h2 style="color:#0B5FA5;">Regulamin publikacji danych w Rejestrze Elektryków</h2>
+  <h2 style="color:#0B5FA5;">Regulamin publikacji danych i korzystania z Rejestru Elektryków (OREP)</h2>
 
   <h3>§1. Postanowienia ogólne</h3>
   <ul>
     <li>Rejestr Elektryków (dalej „Platforma”) umożliwia użytkownikom publikowanie danych dotyczących ich kwalifikacji zawodowych w zakresie elektryki.</li>
-    <li>Platforma nie weryfikuje danych wprowadzanych przez użytkowników i nie odpowiada za ich prawdziwość.</li>
+    <li>Platforma umożliwia również korzystanie z płatnych funkcji, takich jak abonament Elektryk PRO, wyróżnienia profili oraz ekspresową weryfikację danych.</li>
+    <li>Użytkownik przed dokonaniem płatności akceptuje niniejszy regulamin oraz politykę prywatności.</li>
   </ul>
 
   <h3>§2. Definicje</h3>
   <ul>
-    <li><strong>Użytkownik</strong> – osoba fizyczna lub prawna korzystająca z Platformy w celu publikacji danych.</li>
+    <li><strong>Użytkownik</strong> – osoba fizyczna lub prawna korzystająca z Platformy w celu publikacji danych i/lub korzystania z funkcji płatnych.</li>
     <li><strong>Dane publikowane</strong> – informacje wprowadzone przez Użytkownika w formularzu (np. imię, nazwisko, numer uprawnień, telefon, email, status).</li>
+    <li><strong>Płatności</strong> – opłaty za funkcje dodatkowe Platformy, takie jak Elektryk PRO, wyróżnienia profili i ekspresowa weryfikacja.</li>
   </ul>
 
   <h3>§3. Konto użytkownika</h3>
   <ul>
     <li>Każdy Użytkownik zobowiązany jest utworzyć konto na Platformie.</li>
     <li>Dane publikowane przez Użytkownika są przypisane do jego konta.</li>
+    <li>Użytkownik odpowiada za bezpieczeństwo swojego konta i danych logowania.</li>
   </ul>
 
   <h3>§4. Odpowiedzialność</h3>
@@ -24,6 +27,7 @@
     <li>Użytkownik oświadcza, że dane publikowane w Platformie są prawdziwe i że posiada prawo do ich publikacji.</li>
     <li>Użytkownik ponosi pełną odpowiedzialność za wprowadzane dane.</li>
     <li>Administrator Platformy (OREP) nie odpowiada za prawdziwość ani kompletność danych publikowanych przez Użytkowników.</li>
+    <li>OREP nie ponosi odpowiedzialności za jakiekolwiek szkody powstałe w wyniku korzystania z funkcji płatnych, chyba że wynikają one z winy Administratora.</li>
   </ul>
 
   <h3>§5. Zgłoszenia naruszeń</h3>
@@ -42,5 +46,24 @@
   <ul>
     <li>Wszystkie dane są publikowane na Platformie w formie publicznej bazy.</li>
     <li>Użytkownik może w każdej chwili zaktualizować lub usunąć swoje dane.</li>
+  </ul>
+
+  <h3>§8. Płatności</h3>
+  <ul>
+    <li>Funkcje płatne (abonament Elektryk PRO, wyróżnienia profili, ekspresowa weryfikacja) są udostępniane po dokonaniu płatności online.</li>
+    <li>Użytkownik akceptuje ceny i warunki płatności podane w formularzu.</li>
+    <li>Zwroty są możliwe tylko w przypadku błędnie naliczonych opłat lub problemów technicznych, zgodnie z regulaminem platformy.</li>
+  </ul>
+
+  <h3>§9. Przetwarzanie danych osobowych</h3>
+  <ul>
+    <li>Administratorem danych osobowych Użytkowników jest OREP sp. z o.o. (adres: …, e-mail: …).</li>
+    <li>Dane są przetwarzane w celu prowadzenia Rejestru Elektryków oraz realizacji płatności online zgodnie z RODO.</li>
+    <li>Użytkownik ma prawo dostępu, poprawiania i usunięcia swoich danych oraz prawo do cofnięcia zgody na przetwarzanie danych.</li>
+  </ul>
+
+  <h3>§10. Kontakt</h3>
+  <ul>
+    <li>Wszelkie pytania dotyczące regulaminu, płatności lub danych osobowych należy kierować na adres: kontakt@orep.pl</li>
   </ul>
 </section>
