--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -90,6 +90,7 @@ button[type="submit"]:hover { background: #45a049; }
   font-size: 14px;
 }
 .rodo-label input[type="checkbox"] { margin-right: 10px; accent-color: orange; }
+.rodo-label a { text-decoration: underline; color: #0B5FA5; margin-left: 2px; }
 </style>
 </head>
 
@@ -140,7 +141,7 @@ button[type="submit"]:hover { background: #45a049; }
 
   <label class="rodo-label">
     <input type="checkbox" id="rodo" required>
-    Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
+    Wyrażam zgodę na <a href="/regulamin" target="_blank">Regulamin Platformy</a> oraz <a href="/polityka-prywatnosci" target="_blank">Politykę prywatności</a>. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
   </label>
 
   <button type="submit" id="submit-btn">Zarejestruj</button>
@@ -164,6 +165,17 @@ const fields = [
   'imie','nazwisko','miasto','wojewodztwo',
   'nrE','nrEPomiary','nrD','telefon','zajmujeSie'
 ]
+
+// --- BLOKADA NUMERU TELEFONU I EMAIL W POLACH INNYCH NIŻ PRZEZNACZONE ---
+const zabronionePattern = /[0-9@]/g;
+fields.forEach(f => {
+  if(f !== 'telefon' && f !== 'email') {
+    const el = document.getElementById(f)
+    el.addEventListener('input', () => {
+      el.value = el.value.replace(zabronionePattern, '');
+    })
+  }
+})
 
 async function loadWojewodztwa(selectedWoj = null) {
   const { data, error } = await supabase
@@ -214,7 +226,6 @@ document.getElementById('close-btn').addEventListener('click', () => {
   window.location.href = 'https://orep.pl/';
 })
 
-// --- Pobranie bieżącego użytkownika i wstępne wypełnienie formularza ---
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
   if (!user) return
@@ -238,7 +249,6 @@ document.addEventListener('DOMContentLoaded', async () => {
   }
 })
 
-// --- FUNKCJA WYSYŁAJĄCA MAGIC EMAIL ---
 async function wyslijMagicEmail(email) {
   try {
     const res = await fetch('https://orep.pl/api/magic-mail', {
@@ -255,12 +265,19 @@ async function wyslijMagicEmail(email) {
   }
 }
 
-// --- OBSŁUGA SUBMIT FORMULARZA ---
 document.getElementById('register-form').addEventListener('submit', async e => {
   e.preventDefault()
   loading.style.display = 'block'
   result.textContent = ''
   result.className = ''
+
+  // --- WALIDACJA CHECKBOX RODO ---
+  if (!document.getElementById('rodo').checked) {
+    loading.style.display = 'none';
+    result.textContent = 'Musisz zaakceptować regulamin i politykę prywatności';
+    result.className = 'error';
+    return;
+  }
 
   // --- WALIDACJA nrE / nrEPomiary / nrD ---
   if (nrE.value && nrEPomiary.value) {
@@ -278,7 +295,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
 
   // --- WALIDACJA PLIKU ---
   const allowedTypes = ['application/pdf', 'image/jpeg', 'image/png']
-  const maxSize = 5 * 1024 * 1024 // 5MB
+  const maxSize = 5 * 1024 * 1024
   for (let i = 0; i < plik.files.length; i++) {
     const file = plik.files[i]
     if (!allowedTypes.includes(file.type)) {
@@ -299,8 +316,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
   let plikUrls = []
   for (let i = 0; i < plik.files.length; i++) {
     const file = plik.files[i]
-  const path = `${currentUser.id}/${Date.now()}_${file.name}`
-
+    const path = `${currentUser.id}/${Date.now()}_${file.name}`
     const { error: uploadError } = await supabase.storage.from('uprawnienia').upload(path, file, { upsert: true })
     if (uploadError) {
       loading.style.display = 'none'
@@ -322,6 +338,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
   const payload = { email: currentUser.email }
   fields.forEach(f => payload[f] = document.getElementById(f).value.trim())
   if (plikUrls.length) payload.plik = plikUrls.join(',')
+  payload.rodo_accepted_at = new Date().toISOString()
 
   const { error } = await supabase.from('tabela_elektrykow').upsert(payload, { onConflict: 'email' })
 
@@ -330,13 +347,8 @@ document.getElementById('register-form').addEventListener('submit', async e => {
   if (error) {
     result.textContent = error.message
     result.className = 'error'
-    const { data: { user } } = await supabase.auth.getUser()
-console.log('USER:', user)
   } else {
-    // --- WYŚLIJ MAGIC EMAIL ---
     await wyslijMagicEmail(currentUser.email)
-
-    // --- PRZEKIEROWANIE po sukcesie ---
     window.location.href = 'https://orep.pl/logowanie';
   }
 })
