--- a/profil/index.html
+++ b/profil/index.html
@@ -32,13 +32,24 @@ header p {
   opacity:0.9;
 }
 
-/* 🔶 PROSTA POMARAŃCZOWA LINIA */
+/* 🔶 POMARAŃCZOWA LINIA Z TEKSTEM */
 .header-line {
   width:100%;
-  height:16px;
+  height:28px;
   background:#f59e0b;
+  display:flex;
+  align-items:center;
+  justify-content:center;
 }
 
+.header-line span {
+  font-weight:700;
+  font-size:14px;
+  color:#000;
+  line-height:1;
+}
+
+/* SEKCJE */
 section {
   max-width:900px;
   margin:60px auto;
@@ -60,9 +71,9 @@ section {
 }
 
 /* KOLORY STATUSÓW */
-.status-ok { background:#16a34a; }   /* ✅ */
-.status-wait { background:#f59e0b; } /* ⌛ */
-.status-no { background:#dc2626; }   /* ❌ */
+.status-ok { background:#16a34a; }
+.status-wait { background:#f59e0b; }
+.status-no { background:#dc2626; }
 
 .hidden {
   display:none;
@@ -78,7 +89,9 @@ section {
 </header>
 
 <!-- 🔶 LINIA POD HEADEREM -->
-<div class="header-line"></div>
+<div class="header-line">
+  <span id="gwiazdkiLine"></span>
+</div>
 
 <section id="profil" class="hidden">
   <span id="status" class="badge"></span>
@@ -101,6 +114,7 @@ const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 const profil = document.getElementById("profil");
 const brak = document.getElementById("brak");
 const statusEl = document.getElementById("status");
+const gwiazdkiLine = document.getElementById("gwiazdkiLine");
 
 const statusMap = {
   "✅": { text: "Status ELEKTRYKA - zweryfikowany", class: "status-ok" },
@@ -108,11 +122,11 @@ const statusMap = {
   "❌": { text: "Status ELEKTRYKA - aktualnie brak weryfikacji", class: "status-no" }
 };
 
-// Pobranie ID z URL
+// ID z URL
 const urlParams = new URLSearchParams(window.location.search);
 const id = urlParams.get('id');
 
-if(id){
+if (id) {
   const loadProfile = async () => {
     const { data, error } = await supabase
       .from("tabela_elektrykow")
@@ -120,12 +134,16 @@ if(id){
       .eq("id", id)
       .maybeSingle();
 
-    if(error || !data){
+    if (error || !data) {
       profil.classList.add("hidden");
       brak.classList.remove("hidden");
+      gwiazdkiLine.textContent = "";
     } else {
       document.getElementById("heroName").textContent = `${data.imie} ${data.nazwisko}`;
       document.getElementById("opis").textContent = data.zajmujeSie || "Usługi elektryczne";
+
+      // ⭐ GWIAZDKI JAKO TEKST
+      gwiazdkiLine.textContent = data.gwiazdki || "";
 
       statusEl.className = "badge";
       if (statusMap[data.status]) {
@@ -138,7 +156,8 @@ if(id){
       profil.classList.remove("hidden");
       brak.classList.add("hidden");
     }
-  }
+  };
+
   loadProfile();
 }
 </script>
