--- a/profil/index.html
+++ b/profil/index.html
@@ -36,7 +36,7 @@ header p {
 .header-line {
   width:100%;
   height:28px;
-  background:#f59e0b;
+  background:#111827;
   display:flex;
   align-items:center;
   justify-content:center;
