--- a/profil/index.html
+++ b/profil/index.html
@@ -36,7 +36,7 @@ header p {
 .header-line {
   width:100%;
   height:28px;
-  background:#111827;
+  background:#0f172a;
   display:flex;
   align-items:center;
   justify-content:center;
