Increase font size and letter spacing in header line

--- a/profil/index.html
+++ b/profil/index.html
@@ -36,6 +36,8 @@ header p {
 .header-line {
   width:100%;
   height:56px;
+  font-size:22px;
+  letter-spacing:3px;
   background:#0f172a;
   display:flex;
   align-items:center;
