Change header background gradient colors

--- a/profil/index.html
+++ b/profil/index.html
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-  background: linear-gradient(135deg,#1f2933,#111827);
+  background: linear-gradient(135deg, #0B5FA5, #0f72c1);
   color:#fff;
   text-align:center;
   padding:70px 20px;
