--- a/profil/index.html
+++ b/profil/index.html
@@ -30,6 +30,7 @@ header p {
   max-width:700px;
   margin:0 auto 25px;
   opacity:0.9;
+  color: #c76c14; /* ciemno-pomarańczowy */
 }
 
 /* 🔶 POMARAŃCZOWA LINIA Z TEKSTEM */
