Change text color from dark orange to dark gray

--- a/profil/index.html
+++ b/profil/index.html
@@ -30,7 +30,7 @@ header p {
   max-width:700px;
   margin:0 auto 25px;
   opacity:0.9;
-  color: #c76c14; /* ciemno-pomarańczowy */
+  color: #1c1c1e; /* ciemno-pomarańczowy */
 }
 
 /* 🔶 POMARAŃCZOWA LINIA Z TEKSTEM */
