Update text color in profil/index.html
Change text color from dark orange to light gray.

--- a/profil/index.html
+++ b/profil/index.html
@@ -30,7 +30,7 @@ header p {
   max-width:700px;
   margin:0 auto 25px;
   opacity:0.9;
-  color: #1c1c1e; /* ciemno-pomarańczowy */
+  color: #f4f4f5;
 }
 
 /* 🔶 POMARAŃCZOWA LINIA Z TEKSTEM */
