Update  index.html

--- a/admin/ index.html
+++ b/admin/ index.html
@@ -58,7 +58,7 @@ async function checkSession() {
 
   if (!data.session) return;
 
-  const adminEmail = "ADMIN_EMAIL@DOMENA.PL";
+  const adminEmail = "piotr8040@gmail.com";
 
   if (data.session.user.email !== adminEmail) {
     alert('Brak uprawnień administratora');
