Update  index.html

--- a/admin/ index.html
+++ b/admin/ index.html
@@ -73,8 +73,8 @@ async function checkSession() {
 }
 
   const supabase = supabaseJs.createClient(
-    "https://TWOJ_PROJECT.supabase.co",
-    "TWOJ_ANON_KEY"
+    "https://tfbqqduxtsacvwfigsvt.supabase.co",
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8"
   );
 
   async function loadData() {
