--- a/admin/index.html
+++ b/admin/index.html
@@ -1,1 +1,143 @@
-admin////////////////////
+<!DOCTYPE html><html lang="pl">
+<head>
+<meta http-equiv="refresh" content="0; url=/admin/">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Panel admina – Elektrycy</title>
+  <meta name="robots" content="noindex, nofollow">  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>  <style>
+    body { font-family: Arial, sans-serif; background:#f4f6f8; padding:20px; }
+    table { width:100%; border-collapse:collapse; background:#fff; }
+    th, td { border:1px solid #ddd; padding:8px; font-size:13px; }
+    th { background:#222; color:#fff; }
+    input, select { width:100%; box-sizing:border-box; }
+    button { padding:6px 10px; cursor:pointer; background:#2ecc71; border:none; color:#fff; }
+  </style></head>
+<body><!-- LOGOWANIE ADMIN --><div id="loginBox" style="max-width:360px;margin:80px auto;padding:20px;background:#fff;border:1px solid #ddd">
+  <h2>Logowanie admin</h2>
+  <input id="email" type="email" placeholder="Email" style="margin-bottom:10px" />
+  <input id="password" type="password" placeholder="Hasło" style="margin-bottom:10px" />
+  <button onclick="login()">Zaloguj</button>
+  <p id="loginError" style="color:red"></p>
+</div><div id="adminPanel" style="display:none"><h1>Panel admina – tabela_elektrykow</h1><table>
+  <thead>
+    <tr>
+      <th>LP</th>
+      <th>Imię</th>
+      <th>Nazwisko</th>
+      <th>Miasto</th>
+      <th>Woj.</th>
+      <th>nr E</th>
+      <th>nr E + Pomiary</th>
+      <th>nr D</th>
+      <th>Status</th>
+      <th>Gwiazdki</th>
+      <th>Telefon</th>
+      <th>Email</th>
+      <th>Pokaż kontakt</th>
+      <th>Zapisz</th>
+    </tr>
+  </thead>
+  <tbody id="tbody"></tbody>
+</table>
+</div><script>
+
+async function login() {
+  const email = document.getElementById('email').value;
+  const password = document.getElementById('password').value;
+
+  const { error } = await supabase.auth.signInWithPassword({ email, password });
+
+  if (error) {
+    document.getElementById('loginError').innerText = 'Błędne dane logowania';
+  } else {
+    checkSession();
+  }
+}
+
+async function checkSession() {
+  const { data } = await supabase.auth.getSession();
+
+  if (!data.session) return;
+
+  const adminEmail = "piotr8040@gmail.com";
+
+  if (data.session.user.email !== adminEmail) {
+    alert('Brak uprawnień administratora');
+    await supabase.auth.signOut();
+    return;
+  }
+
+  document.getElementById('loginBox').style.display = 'none';
+  document.getElementById('adminPanel').style.display = 'block';
+
+  loadData();
+}
+
+  const supabase = supabaseJs.createClient(
+    "https://tfbqqduxtsacvwfigsvt.supabase.co",
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8"
+  );
+
+  async function loadData() {
+    const { data, error } = await supabase
+      .from("tabela_elektrykow")
+      .select("id, \"lp.\", imie, nazwisko, miasto, wojewodztwo, nrE, nrEPomiary, nrD, status, gwiazdki, telefon, email, show_contact")
+      .order("lp.");
+
+    if (error) { console.error(error); return; }
+
+    const tbody = document.getElementById("tbody");
+    tbody.innerHTML = "";
+
+    data.forEach(row => {
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td><input value="${row['lp.'] || ''}"></td>
+        <td><input value="${row.imie || ''}"></td>
+        <td><input value="${row.nazwisko || ''}"></td>
+        <td><input value="${row.miasto || ''}"></td>
+        <td><input value="${row.wojewodztwo || ''}"></td>
+        <td><input value="${row.nrE || ''}"></td>
+        <td><input value="${row.nrEPomiary || ''}"></td>
+        <td><input value="${row.nrD || ''}"></td>
+        <td><input value="${row.status || ''}"></td>
+        <td><input value="${row.gwiazdki || ''}"></td>
+        <td><input value="${row.telefon || ''}"></td>
+        <td><input value="${row.email || ''}"></td>
+        <td style="text-align:center"><input type="checkbox" ${row.show_contact ? 'checked' : ''}></td>
+        <td><button>Zapisz</button></td>
+      `;
+
+      tr.querySelector("button").onclick = async () => {
+        const i = tr.querySelectorAll("input");
+        const payload = {
+          "lp.": i[0].value,
+          imie: i[1].value,
+          nazwisko: i[2].value,
+          miasto: i[3].value,
+          wojewodztwo: i[4].value,
+          nrE: i[5].value,
+          nrEPomiary: i[6].value,
+          nrD: i[7].value,
+          status: i[8].value,
+          gwiazdki: i[9].value,
+          telefon: i[10].value,
+          email: i[11].value,
+          show_contact: i[12].checked
+        };
+
+        const { error } = await supabase
+          .from("tabela_elektrykow")
+          .update(payload)
+          .eq("id", row.id);
+
+        if (error) alert("Błąd zapisu"); else alert("Zapisano");
+      };
+
+      tbody.appendChild(tr);
+    });
+  }
+
+  checkSession();
+</script></body>
+</html>
