--- a/admin/index.html
+++ b/admin/index.html
@@ -14,7 +14,7 @@
     input, select { width:100%; box-sizing:border-box; }
     button { padding:6px 10px; cursor:pointer; background:#2ecc71; border:none; color:#fff; }
     #loginBox { max-width:360px;margin:20px auto;padding:20px;background:#fff;border:1px solid #ddd; }
-    #logBox { max-width:800px;margin:20px auto;padding:10px;background:#000;color:#0f0;font-family:monospace;height:150px;overflow-y:auto; border:1px solid #333; }
+    #logBox { max-width:800px;margin:20px auto;padding:10px;background:#eee;color:#222;font-family:monospace; min-height:150px; overflow-y:auto; border:1px solid #ccc; }
   </style>
 </head>
 <body>
@@ -58,13 +58,13 @@
 <div id="logBox"></div>
 
 <script>
-  // --- FUNKCJA POMOCNICZA DO LOGÓW NA STRONIE ---
+  // --- FUNKCJA LOGÓW NA STRONIE ---
   function log(message, type="log") {
     const logBox = document.getElementById("logBox");
-    const span = document.createElement("div");
-    span.style.color = type === "error" ? "#f00" : "#0f0";
-    span.textContent = message;
-    logBox.appendChild(span);
+    const div = document.createElement("div");
+    div.textContent = message;
+    if(type === "error") div.style.color = "#f00";
+    logBox.appendChild(div);
     logBox.scrollTop = logBox.scrollHeight;
   }
 
@@ -76,7 +76,7 @@
 
   const adminEmail = "piotr8040@gmail.com"; // Twój email admina
 
-  // --- FUNKCJA LOGOWANIA ---
+  // --- LOGOWANIE ---
   async function login() {
     log("Kliknięto login");
     const email = document.getElementById('email').value;
