--- a/admin/index.html
+++ b/admin/index.html
@@ -70,11 +70,16 @@ function log(msg, type="log") {
 
 // --- INICJALIZACJA SUPABASE ---
 log("Inicjalizacja Supabase...");
-const supabase = supabase.createClient(
-  "https://tfbqqduxtsacvwfigsvt.supabase.co",
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8"
-);
-log("Supabase zainicjalizowany");
+let supabase;
+try {
+  supabase = supabase.createClient(
+    "https://tfbqqduxtsacvwfigsvt.supabase.co",
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8"
+  );
+  log("Supabase zainicjalizowany");
+} catch(e) {
+  log("Błąd inicjalizacji Supabase: " + e, "error");
+}
 
 // --- KONFIG ---
 const adminEmail = "piotr8040@gmail.com";
@@ -104,7 +109,11 @@ async function login() {
 async function checkSession() {
   log("Sprawdzanie sesji...");
   try {
-    const { data } = await supabase.auth.getSession();
+    const { data, error } = await supabase.auth.getSession();
+    if(error) {
+      log("Błąd getSession: " + JSON.stringify(error), "error");
+      return;
+    }
     log("Dane sesji: " + JSON.stringify(data));
 
     if(!data.session) {
